feat: :sparkles: Added spinner animation when sending the link

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,16 @@
 <br>
   <input type="text" id="url" placeholder="Post url">
 <button id="submit">Submit</button>
+<!-- From Uiverse.io by abrahamcalsin -->
+<div class="dot-spinner" id="spinner">
+  <div class="dot-spinner__dot"></div>
+  <div class="dot-spinner__dot"></div>
+  <div class="dot-spinner__dot"></div>
+  <div class="dot-spinner__dot"></div>
+  <div class="dot-spinner__dot"></div>
+  <div class="dot-spinner__dot"></div>
+  <div class="dot-spinner__dot"></div>
+  <div class="dot-spinner__dot"></div>
+</div>
 </body>
 </html>
